--- a/FRONT/index.html
+++ b/FRONT/index.html
@@ -70,6 +70,36 @@
   </div>
 
 
+  <h3 class="titulo-destacados">Productos Destacados</h3>
+
+<a href=""><div class="contenedor-destacado">
+  <div class="destacado" >
+    <img src="../src/img/iphone14.png" alt="">
+    <h3>Iphones</h3>
+  </div>
+</a>
+  
+
+ <a href=""><div class="destacado">
+    <img src="../src/img/magsafe.png" alt="">
+    <h3>Cargadores</h3>
+  </div>
+</a>
+
+<a href=""> <div class="destacado">
+    <img src="../src/img/airpods.png" alt="">
+    <h3>Airpods</h3>
+  </div>
+</a>
+
+<a href=""> <div class="destacado">
+    <img src="../src/img/watch.png" alt="">
+    <h3>Watch</h3>
+  </div>
+</div>
+</a>
+
+
 
     
 
