--- a/FRONT/index.html
+++ b/FRONT/index.html
@@ -101,7 +101,224 @@
 </div>
 </a>
 
+<!--Iphones -->
 
+
+<h3 class="titulo-destacados">Iphone</h3>
+<div class="scroll-contenedor">
+<div class="scroll">
+  <div class="producto">
+    <img src="../src/img/iphone14.png" alt="">
+    <h4>Iphone 13</h4>
+    <a href="">Comprar!</a>
+  </div>
+
+  <div class="producto">
+    <img src="../src/img/iphone14.png" alt="">
+    <h4>Iphone 13</h4>
+    <a href="">Comprar!</a>
+  </div>
+
+  <div class="producto">
+    <img src="../src/img/iphone14.png" alt="">
+    <h4>Iphone 13</h4>
+    <a href="">Comprar!</a>
+  </div>
+
+  <div class="producto">
+    <img src="../src/img/iphone14.png" alt="">
+    <h4>Iphone 13</h4>
+    <a href="">Comprar!</a>
+  </div>
+
+  <div class="producto">
+    <img src="../src/img/iphone14.png" alt="">
+    <h4>Iphone 13</h4>
+    <a href="">Comprar!</a>
+  </div>
+
+  <div class="producto">
+    <img src="../src/img/iphone14.png" alt="">
+    <h4>Iphone 13</h4>
+    <a href="">Comprar!</a>
+  </div>
+
+  <div class="producto">
+    <img src="../src/img/iphone14.png" alt="">
+    <h4>Iphone 13</h4>
+    <a href="">Comprar!</a>
+  </div>
+
+  <div class="producto">
+    <img src="../src/img/iphone14.png" alt="">
+    <h4>Iphone 13</h4>
+    <a href="">Comprar!</a>
+  </div>
+
+  <div class="producto">
+    <img src="../src/img/iphone14.png" alt="">
+    <h4>Iphone 13</h4>
+    <a href="">Comprar!</a>
+  </div>
+</div>
+</div>
+
+
+<!-- Cargadores -->
+
+
+<h3 class="titulo-destacados">Accesorios</h3>
+<div class="scroll-contenedor">
+<div class="scroll">
+  <div class="producto">
+    <img src="../src/img/magsafe.png" alt="">
+    <h4>Iphone 13</h4>
+    <a href="">Comprar!</a>
+  </div>
+
+  <div class="producto">
+    <img src="../src/img/magsafe.png" alt="">
+    <h4>Iphone 13</h4>
+    <a href="">Comprar!</a>
+  </div>
+
+  <div class="producto">
+    <img src="../src/img/magsafe.png" alt="">
+    <h4>Iphone 13</h4>
+    <a href="">Comprar!</a>
+  </div>
+
+  <div class="producto">
+    <img src="../src/img/magsafe.png" alt="">
+    <h4>Iphone 13</h4>
+    <a href="">Comprar!</a>
+  </div>
+
+  <div class="producto">
+    <img src="../src/img/magsafe.png" alt="">
+    <h4>Iphone 13</h4>
+    <a href="">Comprar!</a>
+  </div>
+
+  <div class="producto">
+    <img src="../src/img/magsafe.png" alt="">
+    <h4>Iphone 13</h4>
+    <a href="">Comprar!</a>
+  </div>
+
+
+</div>
+</div>
+
+
+<!-- Airpods -->
+
+
+<h3 class="titulo-destacados">Airpods</h3>
+<div class="scroll-contenedor">
+<div class="scroll">
+  <div class="producto">
+    <img src="../src/img/airpods.png" alt="">
+    <h4>Iphone 13</h4>
+    <a href="">Comprar!</a>
+  </div>
+
+  <div class="producto">
+    <img src="../src/img/airpods.png" alt="">
+    <h4>Iphone 13</h4>
+    <a href="">Comprar!</a>
+  </div>
+
+  <div class="producto">
+    <img src="../src/img/airpods.png" alt="">
+    <h4>Iphone 13</h4>
+    <a href="">Comprar!</a>
+  </div>
+
+  <div class="producto">
+    <img src="../src/img/airpods.png" alt="">
+    <h4>Iphone 13</h4>
+    <a href="">Comprar!</a>
+  </div>
+
+  <div class="producto">
+    <img src="../src/img/airpods.png" alt="">
+    <h4>Iphone 13</h4>
+    <a href="">Comprar!</a>
+  </div>
+
+  <div class="producto">
+    <img src="../src/img/airpods.png" alt="">
+    <h4>Iphone 13</h4>
+    <a href="">Comprar!</a>
+  </div>
+
+  <div class="producto">
+    <img src="../src/img/airpods.png" alt="">
+    <h4>Iphone 13</h4>
+    <a href="">Comprar!</a>
+  </div>
+
+  <div class="producto">
+    <img src="../src/img/airpods.png" alt="">
+    <h4>Iphone 13</h4>
+    <a href="">Comprar!</a>
+  </div>
+
+
+</div>
+</div>
+
+
+<!-- Relojes -->
+
+<h3 class="titulo-destacados">Watch</h3>
+<div class="scroll-contenedor">
+<div class="scroll">
+  <div class="producto">
+    <img src="../src/img/watch.png" alt="">
+    <h4>Iphone 13</h4>
+    <a href="">Comprar!</a>
+  </div>
+
+  <div class="producto">
+    <img src="../src/img/watch.png" alt="">
+    <h4>Iphone 13</h4>
+    <a href="">Comprar!</a>
+  </div>
+
+  <div class="producto">
+    <img src="../src/img/watch.png" alt="">
+    <h4>Iphone 13</h4>
+    <a href="">Comprar!</a>
+  </div>
+
+  <div class="producto">
+    <img src="../src/img/watch.png" alt="">
+    <h4>Iphone 13</h4>
+    <a href="">Comprar!</a>
+  </div>
+
+  <div class="producto">
+    <img src="../src/img/watch.png" alt="">
+    <h4>Iphone 13</h4>
+    <a href="">Comprar!</a>
+  </div>
+
+  <div class="producto">
+    <img src="../src/img/watch.png" alt="">
+    <h4>Iphone 13</h4>
+    <a href="">Comprar!</a>
+  </div>
+
+  <div class="producto">
+    <img src="../src/img/watch.png" alt="">
+    <h4>Iphone 13</h4>
+    <a href="">Comprar!</a>
+  </div>
+
+</div>
+</div>
 
     
 
